--- a/fdlb_front/package.json
+++ b/fdlb_front/package.json
@@ -1,8 +1,12 @@
 {
     "name": "fdlb_front",
     "dependencies": {
+        "antd": "^3.1.6",
+        "jquery": "^3.3.1",
         "react": "^15.5.4",
-        "react-dom": "^15.5.4"
+        "react-dom": "^15.5.4",
+        "react-router": "^4.2.0",
+        "react-router-dom": "^4.2.2"
     },
     "version": "0.1.0",
     "devDependencies": {
@@ -27,7 +31,7 @@
         "react-dev-utils": "^1.0.3",
         "style-loader": "^0.17.0",
         "webpack": "^2.5.1",
-        "webpack-dev-server": "^2.4.5"
+        "webpack-dev-server": "^2.11.1"
     },
     "scripts": {
         "start": "node scripts/start.js",
